--- a/index.html
+++ b/index.html
@@ -1,25 +1,66 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+	<base target="_top">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<title>Distrik Kota Jayapura</title>
+	
+	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+
+	<style>
+		
+		.map {
+			height: 100vh;
+			width: 100%;
+		}
+	</style>
+
+	
 </head>
 <body>
 
-    <div id="map" style="width: 100%; height: 100vh;"></div>
-    <script>
-        var map = L.map('map').setView([-2.53371, 140.71813], 13);
+<div id='map' class="map"></div>
 
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-        }).addTo(map);
+<script type="text/javascript" src="assets/geojson/jayapura.js"></script>
+
+<script type="text/javascript">
+
+const map = L.map('map');
+
+map.createPane('labels');
+
+map.getPane('labels').style.zIndex = 650;
+
+map.getPane('labels').style.pointerEvents = 'none';
+
+const cartodbAttribution = '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, &copy; <a href="https://carto.com/attribution">CARTO</a>';
+
+const positron =   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: cartodbAttribution
+}).addTo(map);
+
+const positronLabels = L.tileLayer('http://{s}.basemaps.cartocdn.com/light_only_labels/{z}/{x}/{y}.png', {
+    attribution: cartodbAttribution,
+    pane: 'labels'
+}).addTo(map);
+
+/* global euCountries */
+const geojson = L.geoJson(distrik).addTo(map);
+
+geojson.eachLayer((layer) => {
+    layer.bindPopup(layer.feature.properties.nama);
+});
+map.setView({lat: -2.53371, lng: 140.71813}, 13);
+
+</script>
 
 
-    </script>
 
 </body>
 </html>
