--- a/index.html
+++ b/index.html
@@ -50,8 +50,18 @@ const positronLabels = L.tileLayer('http://{s}.basemaps.cartocdn.com/light_only_
     pane: 'labels'
 }).addTo(map);
 
-/* global euCountries */
-const geojson = L.geoJson(distrik).addTo(map);
+const geojson = L.geoJson(distrik, {
+    style: function(feature) {
+        switch (feature.properties.nama) {
+            case 'Abepura': return {color: "#ff0000", fillColor: "#ff0000", fillOpacity: 1.0};
+            case 'Heram': return {color: "#0000ff", fillColor: "#0000ff", fillOpacity: 1.0};
+            case 'Jayapura Utara': return {color: "#00ff00", fillColor: "#00ff00", fillOpacity: 1.0};
+            case 'Jayapura Selatan': return {color: "#ffff00", fillColor: "#ffff00", fillOpacity: 1.0};
+            case 'Muara Tami': return {color: "#eed959", fillColor: "#eed959", fillOpacity: 1.0};
+            default: return {color: "#ffffff", fillColor: "#ffffff", fillOpacity: 1.0}; // Default color if no match is found
+        }
+    }
+}).addTo(map);
 
 geojson.eachLayer((layer) => {
     layer.bindPopup(layer.feature.properties.nama);
