feat:color maps

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ const geojson = L.geoJson(distrik, {
             case 'Jayapura Utara': return {color: "#00ff00", fillColor: "#00ff00", fillOpacity: 1.0};
             case 'Jayapura Selatan': return {color: "#ffff00", fillColor: "#ffff00", fillOpacity: 1.0};
             case 'Muara Tami': return {color: "#eed959", fillColor: "#eed959", fillOpacity: 1.0};
-            default: return {color: "#ffffff", fillColor: "#ffffff", fillOpacity: 1.0}; // Default color if no match is found
+            default: return {color: "#ffffff", fillColor: "#ffffff", fillOpacity: 1.0}; 
         }
     }
 }).addTo(map);
