--- a/distrik-bidang-kerja.html
+++ b/distrik-bidang-kerja.html
@@ -74,23 +74,30 @@ L.control.layers(null, districtLayers,{collapsed: false}).addTo(map);
 
 const sapu = L.layerGroup().addTo(map);
 const babat = L.layerGroup().addTo(map);
+const truck = L.layerGroup().addTo(map);
 
 const icons = {
-    "sapu": L.icon({iconUrl: 'assets/img/pin-home-green.png', iconSize: [25, 41], iconAnchor: [12, 41], popupAnchor: [1, -34]}),
-    "babat": L.icon({iconUrl: 'assets/img/babat.png', iconSize: [25, 41], iconAnchor: [12, 41], popupAnchor: [1, -34]}),
+    "sapu": L.icon({iconUrl: 'assets/img/sapu.png', iconSize: [50, 50], iconAnchor: [12, 41], popupAnchor: [1, -34]}),
+    "babat": L.icon({iconUrl: 'assets/img/babat.png', iconSize: [50, 50], iconAnchor: [12, 41], popupAnchor: [1, -34]}),
+    "truck": L.icon({iconUrl: 'assets/img/truck.png', iconSize: [50, 50], iconAnchor: [12, 41], popupAnchor: [1, -34]}),
+    "tempatsampah": L.icon({iconUrl: 'assets/img/tempat-sampah.png', iconSize: [50, 50], iconAnchor: [12, 41], popupAnchor: [1, -34]}),
 };
 
 const sapuMarkers = {
-    "Vim": L.marker([-2.595713, 140.6597402], {icon: icons.sapu}).bindPopup('<b>Sapu Vim</b><br><img src="assets/img/avatar.png" alt="Profile Picture" style="width:100px;height:auto;"><br>Nama: John Doe<br>Keterangan: Penyapu Jalan').addTo(sapu),
+    "Vim": L.marker([-2.702713, 140.8597450], {icon: icons.sapu}).bindPopup('<b>Sapu Vim</b><br><img src="assets/img/avatar.png" alt="Profile Picture" style="width:100px;height:auto;"><br>Nama: John Doe<br>Keterangan: Penyapu Jalan').addTo(sapu),
     "Wahno": L.marker([-2.593637, 140.6688757], {icon: icons.sapu}).bindPopup('<b>Sapu Wahno</b><br><img src="assets/img/avatar.png" alt="Profile Picture" style="width:100px;height:auto;"><br>Nama: Jane Doe<br>Keterangan: Penyapu Taman').addTo(sapu),
 };
 
 const babatMarkers = {
     "Muaratami": L.marker([-2.60000, 140.66667], {icon: icons.babat}).bindPopup('<b>Babat MuaraTami</b><br><img src="assets/img/avatar.png" alt="Profile Picture" style="width:100px;height:auto;"><br>Nama: Samuel Bosawer').addTo(babat),
-    "Jayapura Selatan": L.marker([-2.53371, 140.71813], {icon: icons.babat}).bindPopup('<b>Babat Jayapura Selatan</b><br><img src="assets/img/avatar.png" alt="Profile Picture" style="width:100px;height:auto;"><br>Nama: Obi Pranata').addTo(babat),
 };
 
-L.control.layers(null, {"Sapu": sapu, "Babat": babat}, {collapsed: false}).addTo(map);
+const tempatsampahMarkers = {
+    "Jayapura Utara": L.marker([-2.53371, 140.71813], {icon: icons.truck}).bindPopup('<b>Tempat Sampah</b><br><img src="assets/img/avatar.png" alt="Profile Picture" style="width:100px;height:auto;"><br>Nama: Maikel Faidiban').addTo(truck),
+};
+
+
+L.control.layers(null, {"Sapu": sapu, "Babat": babat, "Truck" : truck}, {collapsed: false}).addTo(map);
 
 </script>
 </body>
