--- a/distrik-bidang-kerja.html
+++ b/distrik-bidang-kerja.html
@@ -49,23 +49,23 @@ const positronLabels = L.tileLayer('http://{s}.basemaps.cartocdn.com/light_only_
 
 const districtLayers = {
     "Abepura": L.geoJson(geoAbepura, {
-        style: {color: "#ff0000", fillColor: "#ff0000", fillOpacity: 1.0},
+        style: {color: "#ff0000", fillColor: "#ff0000"},
         onEachFeature: (feature, layer) => layer.bindPopup(feature.properties.nama)
     }).addTo(map),
     "Muara Tami": L.geoJson(geoMuaratami, {
-        style: {color: "#eed959", fillColor: "#eed959", fillOpacity: 1.0},
+        style: {color: "#eed959", fillColor: "#eed959"},
         onEachFeature: (feature, layer) => layer.bindPopup(feature.properties.nama)
     }).addTo(map),
     "Jayapura Utara": L.geoJson(geoJayapurautara, {
-        style: {color: "#00ff00", fillColor: "#00ff00", fillOpacity: 1.0},
+        style: {color: "#00ff00", fillColor: "#00ff00"},
         onEachFeature: (feature, layer) => layer.bindPopup(feature.properties.nama)
     }).addTo(map),
     "Jayapura Selatan": L.geoJson(geoJayapuraselatan, {
-        style: {color: "#ffff00", fillColor: "#ffff00", fillOpacity: 1.0},
+        style: {color: "#ffff00", fillColor: "#ffff00"},
         onEachFeature: (feature, layer) => layer.bindPopup(feature.properties.nama)
     }).addTo(map),
     "Heram": L.geoJson(geoHeram, {
-        style: {color: "#0000ff", fillColor: "#0000ff", fillOpacity: 1.0},
+        style: {color: "#0000ff", fillColor: "#0000ff"},
         onEachFeature: (feature, layer) => layer.bindPopup(feature.properties.nama)
     }).addTo(map)
 };
